FF scrollbar width fix

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -89,11 +89,12 @@ html {
     min-height: 60vh;
     max-height: 70vh;
     scroll-behavior: smooth;
-    scrollbar-width: none;
 }
 
 #subjects[mobile=false] {
     overflow-x: hidden;
+    /* Mozilla Hidden Scrolling */
+    overflow: -moz-scrollbars-none;
     align-items: start;
 }
 
